--- a/cash/src/main/resources/application-dev.yml
+++ b/cash/src/main/resources/application-dev.yml
@@ -47,5 +47,11 @@ management:
   endpoint:
     health:
       show-details: always
+  zipkin:
+    tracing:
+      endpoint: localhost:9411
+  tracing:
+    sampling:
+      probability: 1
 
 
