--- a/exchange-generator/src/main/resources/application-dev.yml
+++ b/exchange-generator/src/main/resources/application-dev.yml
@@ -28,3 +28,18 @@ spring:
 kafka-topics:
   out:
     - rate
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+  zipkin:
+    tracing:
+      endpoint: localhost:9411
+  tracing:
+    sampling:
+      probability: 1
