--- a/accounts/src/main/resources/application-dev.yml
+++ b/accounts/src/main/resources/application-dev.yml
@@ -42,6 +42,7 @@ kafka-topics:
   out:
     - notifications
 
+
 management:
   endpoints:
     web:
@@ -50,3 +51,9 @@ management:
   endpoint:
     health:
       show-details: always
+  zipkin:
+    tracing:
+      endpoint: localhost:9411
+  tracing:
+    sampling:
+      probability: 1
