--- a/bank-charts/charts/exchange/templates/deployment.yaml
+++ b/bank-charts/charts/exchange/templates/deployment.yaml
@@ -62,6 +62,8 @@ spec:
                   key: password
             - name: KAFKA_BOOTSTRAP_SERVERS
               value: {{ .Values.kafka.bootstrapServers | quote }}
+            - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
+              value: {{ .Values.zipkin.endpoint }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
