--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -40,3 +40,18 @@ client:
     base-url: ${CLIENT_BLOCKER_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+  zipkin:
+    tracing:
+      endpoint: ${MANAGEMENT_ZIPKIN_TRACING_ENDPOINT}
+  tracing:
+    sampling:
+      probability: 1
