--- a/exchange/src/main/resources/application-dev.yml
+++ b/exchange/src/main/resources/application-dev.yml
@@ -46,3 +46,18 @@ kafka-topics:
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
+  zipkin:
+    tracing:
+      endpoint: localhost:9411
+  tracing:
+    sampling:
+      probability: 1
