--- a/front-ui/src/main/resources/application-dev.yml
+++ b/front-ui/src/main/resources/application-dev.yml
@@ -36,3 +36,9 @@ management:
   endpoint:
     health:
       show-details: always
+  zipkin:
+    tracing:
+      endpoint: localhost:9411
+  tracing:
+    sampling:
+      probability: 1
