--- a/front-ui/src/main/resources/application.yml
+++ b/front-ui/src/main/resources/application.yml
@@ -38,3 +38,9 @@ management:
   endpoint:
     health:
       show-details: always
+  zipkin:
+    tracing:
+      endpoint: ${MANAGEMENT_ZIPKIN_TRACING_ENDPOINT}
+  tracing:
+    sampling:
+      probability: 1
