--- a/blocker/src/main/resources/application.yml
+++ b/blocker/src/main/resources/application.yml
@@ -11,7 +11,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info
+        include: health, info, prometheus
   endpoint:
     health:
       show-details: always
