feat: дополнительные настройки для метрик

--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -55,3 +55,8 @@ management:
   tracing:
     sampling:
       probability: 1
+  metrics:
+    distribution:
+      percentiles[http.server.requests]: 0.5, 0.90, 0.95, 0.99
+      percentiles-histogram[http.server.requests]: true
+      slo[http.server.requests]: 100ms, 250ms, 500ms, 1s, 2s, 5s, 10s, 30s
