feat: настройки для logstash

--- a/bank-charts/charts/blocker/templates/configmap.yaml
+++ b/bank-charts/charts/blocker/templates/configmap.yaml
@@ -4,3 +4,11 @@ metadata:
   name: {{ include "blocker.fullname" . }}
   labels:
     {{- include "blocker.labels" . | nindent 4 }}
+data:
+    {{- range $key, $value := .Values.config }}
+    {{- if ne $key "database_url" }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+    {{- end }}
+
+    KAFKA_BOOTSTRAP_SERVERS: {{ .Values.config.kafka.bootstrapServers | quote }}
